force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Action_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Action_Prefix__c</fullName>
    <description>DEPRECATED</description>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>Approval Action Prefix</label>
    <type>Text</type>
</CustomField>