force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Actual_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001lyC7EAI</relationshipName>
    <type>Lookup</type>
</CustomField>