force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ApprovalFromEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalFromEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the request was actioned (approved or rejected) through an email response as opposed to the user interface.</description>
    <label>Approval From Email</label>
    <type>Checkbox</type>
</CustomField>