force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ApprovalPolicy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalPolicy__c</fullName>
    <description>The approval policy associated with the rule</description>
    <inlineHelpText>The approval policy associated with the rule</inlineHelpText>
    <label>Approval Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unanimous</fullName>
            </value>
            <value>
                <fullName>Majority</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Quorum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>