force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001m4PKEAY</relationshipName>
    <type>Lookup</type>
</CustomField>