force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Assigned_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assigned_To_Type__c</fullName>
    <label>Assigned To Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval Matrix</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>Subprocess</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Custom Queue</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Custom Role</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
            <value>
                <fullName>Custom User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>