force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__AutoReapprove__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AutoReapprove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true if this request should be auto re-approved by the system.</description>
    <inlineHelpText>This field is set to true if this request should be auto re-approved by the system.</inlineHelpText>
    <label>Auto Reapprove</label>
    <type>Checkbox</type>
</CustomField>