force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__DateCancelled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DateCancelled__c</fullName>
    <description>The date when the approval request was cancelled</description>
    <label>Date Cancelled</label>
    <type>DateTime</type>
</CustomField>