force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__DateReassigned__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DateReassigned__c</fullName>
    <description>The date when the approval request was last reassigned</description>
    <label>Date Reassigned</label>
    <type>DateTime</type>
</CustomField>