force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__EscalateToChain__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EscalateToChain__c</fullName>
    <description>The chain of user ids that this request will get escalated to in the event that it is escalated. This chain is determined when the request is initially submitted and is only applicable to dynamic escalation types.</description>
    <inlineHelpText>The chain of user ids that this request will get escalated to in the event that it is escalated. This chain is determined when the request is initially submitted and is only applicable to dynamic escalation types.</inlineHelpText>
    <label>Escalate To Chain</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>