force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__EscalateToName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EscalateToName__c</fullName>
    <description>The name of the assignee the request will be escalated to if it is escalated.</description>
    <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated.</inlineHelpText>
    <label>Escalate To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>