force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ExpectedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ExpectedCompletionDate__c</fullName>
    <description>The date this approval request is expected to be completed (approved or rejected).</description>
    <inlineHelpText>The date this approval request is expected to be completed (approved or rejected).</inlineHelpText>
    <label>Expected Completion Date</label>
    <type>DateTime</type>
</CustomField>