force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ExpectedMinutesToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ExpectedMinutesToComplete__c</fullName>
    <description>The number of expected minutes that this approval request needs to be completed in (approved or rejected).</description>
    <inlineHelpText>The number of expected minutes that this approval request needs to be completed in (approved or rejected).</inlineHelpText>
    <label>Expected Minutes To Complete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>