force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Group__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Group__c</fullName>
    <label>Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>