force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__HasDelegateApprover__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__HasDelegateApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the assignee has a delegate approver setup in the system. Delegate Approver will be notified, and, will be permitted to take action on the request.</description>
    <inlineHelpText>Indicates that the assignee has a delegate approver setup in the system. Delegate Approver will be notified, and, will be permitted to take action on the request.</inlineHelpText>
    <label>Has Delegate Approver</label>
    <type>Checkbox</type>
</CustomField>