force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>