force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__IsAdhoc__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IsAdhoc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this request was created through adhoc process initiated by User.</description>
    <inlineHelpText>Indicates whether this request was created through adhoc process initiated by User.</inlineHelpText>
    <label>Is Adhoc</label>
    <type>Checkbox</type>
</CustomField>