force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__IsAutoReapprovalEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IsAutoReapprovalEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether auto re-approval is enabled for the step.</description>
    <inlineHelpText>Indicates whether auto re-approval is enabled for the step.</inlineHelpText>
    <label>Is Auto Reapproval Enabled</label>
    <type>Checkbox</type>
</CustomField>