force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__IsSubprocess__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IsSubprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the step represents a subprocess</description>
    <label>Is Subprocess</label>
    <type>Checkbox</type>
</CustomField>