force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>