force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ObjectRefId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ObjectRefId__c</fullName>
    <description>ID of the business object associated with the request</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the business object associated with the request</inlineHelpText>
    <label>Object Ref Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>