force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ParentRequestId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ParentRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the parent approval request. Only applicable for child process steps.</description>
    <inlineHelpText>ID of the parent approval request. Only applicable for child process steps.</inlineHelpText>
    <label>Parent Request</label>
    <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
    <relationshipLabel>Child Approval Requests</relationshipLabel>
    <relationshipName>ChildApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>