force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__PrevAssignedToName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__PrevAssignedToName__c</fullName>
    <description>The name of the assignee the request was previously assigned to</description>
    <label>Prev Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>