force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Rejection_Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Rejection_Action__c</fullName>
    <label>Rejection Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group Rejection</fullName>
            </value>
            <value>
                <fullName>Final Rejection</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Group &amp; Final Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>