force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Related_Agreement_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Related_Agreement_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
    <label>Related Agreement Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>