force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>R00N70000001lyBlEAI</relationshipName>
    <type>Lookup</type>
</CustomField>