force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__RequestType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__RequestType__c</fullName>
    <description>The approval request type</description>
    <inlineHelpText>The approval request type</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Subprocess</fullName>
            </value>
            <value>
                <fullName>Child Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>