force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Send_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>