force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Sequence__c</fullName>
    <label>Sub-Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>