force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Name__c</fullName>
    <description>The step name</description>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>