force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__StepNameLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepNameLink__c</fullName>
    <formula>IF (OR(ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)), HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?Id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;, Apttus_Approval__Step_Name__c, &quot;_top&quot;), Apttus_Approval__Step_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step</label>
    <type>Text</type>
</CustomField>