force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__StepSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepSequence__c</fullName>
    <description>The step execution sequence</description>
    <label>Sequence</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>