force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__SubmissionComment1__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionComment1__c</fullName>
    <description>A comment entered by the submitter when the request was submitted that can be either a process or step level comment.  The comment label is specified by the &quot;Submission Comment 1 Label&quot; field in the related approval process definition.</description>
    <inlineHelpText>A comment entered by the submitter when the request was submitted that can be either a process or step level comment.  The comment label is specified by the &quot;Submission Comment 1 Label&quot; field in the related approval process definition.</inlineHelpText>
    <label>Submission Comment 1</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>