force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__SubstepDependsOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubstepDependsOn__c</fullName>
    <description>List of sub steps (belonging to the same subprocess) which must be completed before this substep. The list contains a comma separated substep sequence numbers</description>
    <label>Substep Depends On</label>
    <type>TextArea</type>
</CustomField>