force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_CQApprov__CartId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__CartId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated cart</description>
    <label>Related Cart</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>