force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_CQApprov__CartOwnerId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__CartOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated cart owner</description>
    <inlineHelpText>ID of the associated cart owner</inlineHelpText>
    <label>Related Cart Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>